--- a/Langton's ant.vcxproj
+++ b/Langton's ant.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ant.h" />
+    <ClInclude Include="game.h" />
     <ClInclude Include="map.h" />
   </ItemGroup>
   <ItemGroup>
