--- a/Langton's ant.vcxproj.filters
+++ b/Langton's ant.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="map.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="game.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
