加入了introduce函数，改进了交互

--- a/Langton's ant.vcxproj.filters
+++ b/Langton's ant.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="map.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="introduction.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
