加入了map类的深拷贝函数，加入了一个新的player_map用于后续玩家交互使用；搭建了交互函数的框架，还待后续实现

--- a/Langton's ant.vcxproj
+++ b/Langton's ant.vcxproj
@@ -133,7 +133,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ant.cpp" />
-    <ClCompile Include="introduction.cpp" />
+    <ClCompile Include="game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="map.cpp" />
   </ItemGroup>
