--- a/Langton's ant.vcxproj.filters
+++ b/Langton's ant.vcxproj.filters
@@ -35,7 +35,7 @@
     <ClCompile Include="map.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="introduction.cpp">
+    <ClCompile Include="game.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
