--- a/Langton's ant.vcxproj
+++ b/Langton's ant.vcxproj
@@ -146,12 +146,14 @@
     <ClInclude Include="ant.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="map.h" />
+    <ClInclude Include="prop.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ant.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="map.cpp" />
+    <ClCompile Include="prop.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
