--- a/Langton's ant.vcxproj.filters
+++ b/Langton's ant.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="game.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="prop.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -36,6 +39,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="game.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="prop.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
